Add event bus and fix slow bean initialization logs